fix(dep): fix metadata tag

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -30,5 +30,5 @@
   branch = "master"
   name = "golang.org/x/net"
 
-[metadata]
+[metadata.heroku]
 root-package = "github.com/wunari/easypoll-backend"
