--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@
 
 [metadata.heroku]
 root-package = "github.com/wunari/easypoll-backend"
+
+[[constraint]]
+  name = "go.mongodb.org/mongo-driver"
+  version = "~1.1.0"
