--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,7 @@ root-package = "github.com/wunari/easypoll-backend"
 [[constraint]]
   name = "go.mongodb.org/mongo-driver"
   version = "~1.1.0"
+
+[[constraint]]
+  name = "github.com/rs/cors"
+  version = "1.7.0"
